portal-web/docroot/html/themes/_styled/css/portlet.css
@import "compass";
@import "mixins";

/* ---------- Portlet wrapper and icons ---------- */

.freeform .portlet {
	margin-bottom: 0;
}

body.portlet {
	border: none;
}

.portlet-topper {
	position: relative;

	.portlet-topper-toolbar {
		margin: 0;
		padding: 2px;
		position: absolute;
		right: 3px;
		text-align: right;
		top: 3px;
		z-index: 300;

		a {
			color: inherit;

			&, &:hover {
				text-decoration: none;
			}

			i {
				font-size: 19px;
			}
		}

		.nobr {
			display: block;
			float: left;
			padding: 1px;
		}

		.portlet-icon-back {
			background: url(../images/arrows/12_left.png) no-repeat 0 50%;
			color: #FFF;
			font-weight: bold;
			padding: 5px 5px 5px 18px;

			&:hover {
				color: #FFF;
			}
		}

		.portlet-options .lfr-icon-menu-text {
			color: transparent;
			font-size: 0;
		}
	}
}

.portlet-title {
	display: block;

	img {
		vertical-align: middle;
	}
}

.portlet-title-editable {
	cursor: pointer;
}

.portlet-title-text {
	display: inline-block;
	max-width: 95%;
	overflow: hidden;
	text-overflow: ellipsis;
	vertical-align: top;
	white-space: nowrap;
}

.panel-page-content, .panel-page-body {
	.portlet-title-text {
		cursor: auto;
	}
}

.portlet-content, .portlet-minimized .portlet-content-container {
	padding: 12px 10px 10px;
}

.portlet-minimized .portlet-content {
	padding: 0;
}

.portlet-nested-portlets .portlet-boundary {
	left: 0 !important;
	position: relative !important;
	top: 0 !important;
}

%portlet-action-bar {
	background: #333;
	color: #FFF;
	text-shadow: -1px -1px #000;

	a {
		color: #3AF;
	}
}

%portlet-action-bar-hover {
	@include opacity(1);
}

%portlet-action-bar-hover-text {
	display: inline-block;
}

.portlet-borderless-bar {
	@extend %portlet-action-bar;

	.portlet-options, .portlet-options.open {
		.dropdown-toggle {
			background-image: url(../images/portlet/options_borderless.png);
		}
	}
}

.portlet-borderless-container, .portlet-content {
	.lfr-icon-actions {
		@extend %portlet-action-bar;
	}
}

.portlet-borderless-container, .portlet-content {
	.lfr-icon-actions {
		float: left;
		margin: 1px 10px 1px 1px;

		@include opacity(0.5);

		padding: 2px 7px;

		.lfr-icon-menu-text, .taglib-text {
			color: #FFF;
			display: none;
			font-weight: bold;
			margin-right: 1em;
			text-decoration: none;
			vertical-align: middle;
		}

		.lfr-icon-action {
			a {
				background: url() no-repeat 0 50%;
				display: inline-block;
				margin-left: 5px;
				vertical-align: top;

				&:hover {
					text-decoration: none;

					span {
						text-decoration: underline;
					}
				}

				img {
					visibility: hidden;
				}
			}

			&.lfr-icon-menu .btn.dropdown-toggle {
				text-align: left;
			}
		}

		.lfr-icon-action-add a {
			background-image: url(../images/common/add_white.png);
		}

		.lfr-icon-action-edit a {
			background-image: url(../images/common/edit_white.png);
		}

		.lfr-icon-action-edit-template a {
			background-image: url(../images/common/edit_template_white.png);
		}

		.lfr-icon-action-configuration a {
			background-image: url(../images/common/configuration_white.png);
		}
	}
}

/* ---------- Borderless portlet ---------- */

.portlet-borderless-container {
	min-height: 2.5em;
	position: relative;
}

.portlet-borderless-bar {
	font-size: 10px;

	@include opacity(0.3);

	padding: 2px 5px 1px;
	position: absolute;
	right: 0;
	top: 0;

	z-index: 200;

	@include respond-to(phone, tablet) {
		position: static;
	}

	a {
		background: url() no-repeat 0 50%;
		display: inline-block;
		height: 16px;
		margin-left: 5px;
		text-indent: -9999px;
		vertical-align: middle;
		width: 16px;
	}

	.portlet-actions {
		display: none;
		float: left;
		margin-right: 10px;
		overflow: hidden;

		@include respond-to(phone, tablet) {
			float: right;
			margin-right: 0;

			.portlet-action, .portlet-options {
				display: inline-block;
			}

			.portlet-close a {
				margin-top: -3px;
			}
		}
	}

	.portlet-actions, .portlet-title-default {
		min-height: 20px;
		vertical-align: top;
	}

	.portlet-action-separator {
		display: none;
	}

	.portlet-back a {
		color: #FFF;
		height: auto;
		text-indent: 0;
		width: auto;
	}

	.portlet-close a {
		background-image: url(../images/portlet/close_borderless.png);
	}

	.portlet-options li.lfr-trigger strong a {
		background-image: url(../images/portlet/options_borderless.png);
	}
}

.lfr-configurator-visibility {
	.portlet-borderless-bar {
		@include opacity(0.6);
	}

	.portlet-content {
		.lfr-icon-actions {
			@include opacity(1);
		}
	}
}

.portlet-borderless-container:hover .portlet-borderless-bar {
	@extend %portlet-action-bar-hover;

	.portlet-actions {
		@extend %portlet-action-bar-hover-text;
	}
}

.portlet-borderless-container, .portlet-content {
	&:hover {
		.lfr-icon-actions {
			@extend %portlet-action-bar-hover;

			.taglib-text {
				@extend %portlet-action-bar-hover-text;
			}
		}
	}

	.icons-container {
		clear: both;
		height: auto;
		margin-top: 1em;
		overflow: hidden;
		width: auto;
	}
}

@include respond-to(phone, tablet) {
	.portlet-borderless-container .portlet-title-default {
		float: none;
	}
}

.portlet-title-default {
	display: inline-block;
	float: right;
	font-weight: bold;
	text-transform: uppercase;

	@include respond-to(phone, tablet) {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
		width: 74%;
	}
}

.portlet-draggable {
	.portlet-topper {
		cursor: move;
	}

	.portlet-title-default {
		background: url(../images/portlet/draggable_borderless.png) no-repeat 0 50%;
		cursor: move;
		padding-left: 20px;
	}
}

/* ---------- Panel page ---------- */

.lfr-panel-page {
	width: 100%;

	.portlet-title {
		font-size: 13px;
	}

	.lfr-add-content h2 span {
		background-color: #D3DADD;
	}
}

/* ---------- Standard styles defined in the JSR 168 ---------- */

/* ---------- Fonts ---------- */

/* ---------- Font attributes for the 'normal' fragment font ---------- */

.portlet-font {
}
/* ... */

